--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "simpl-schema": "^1.5.0"
