--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "hockLiveStats",
+  "name": "hocklivestats",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --once --driver-package meteortesting:mocha",
+    "test:watch": "TEST_WATCH=1 TEST_BROWSER_DRIVER=phantomjs meteor test --driver-package meteortesting:mocha"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
@@ -14,5 +16,12 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "simpl-schema": "^1.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "sinon": "^6.0.0"
   }
 }
